--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <div class="menu-icon" id="menuIcon"></div> <!-- Drei Striche -->
         <h1>Willkommen bei MishaPlu</h1>
         <div class="header-logo">
             <!-- <img src="rollmops.gif" alt="Logo 2"> -->
