--- a/index.html
+++ b/index.html
@@ -5,44 +5,290 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="icon.png" type="image/x-icon">
     <title>MishaPlu</title>
-    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+
+        :root {
+            --primary-color: #FF69B4;
+            --secondary-color: #FF1493;
+            --background-color: #FFF0F5;
+        }
+
+        body, html {
+            height: 100%;
+            margin: 0;
+            font-family: 'Poppins', sans-serif;
+            overflow-x: hidden;
+        }
+
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: linear-gradient(to bottom, var(--primary-color), var(--secondary-color));
+            min-height: 100vh;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+
+        .container {
+            background-color: rgba(255, 240, 245, 0.8);
+            border-radius: 20px;
+            padding: 2rem;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            max-width: 400px;
+            width: 100%;
+            z-index: 10;
+        }
+
+        .avatar {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            margin-bottom: 1rem;
+            border: 5px solid var(--primary-color);
+            box-shadow: 0 0 15px rgba(255, 105, 180, 0.5);
+        }
+
+        h1 {
+            color: var(--secondary-color);
+            margin-bottom: 0.5rem;
+            font-size: 2rem;
+        }
+
+        .bio {
+            color: #666;
+            margin-bottom: 1.5rem;
+            font-size: 1rem;
+        }
+
+        .links {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+        }
+
+        .link {
+            background-color: var(--primary-color);
+            color: white;
+            padding: 1rem;
+            border-radius: 10px;
+            text-decoration: none;
+            font-weight: bold;
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .link:before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(
+                120deg,
+                transparent,
+                rgba(255, 255, 255, 0.3),
+                transparent
+            );
+            transition: all 0.5s;
+        }
+
+        .link:hover:before {
+            left: 100%;
+        }
+
+        .link:hover {
+            transform: scale(1.05);
+            box-shadow: 0 0 15px rgba(255, 105, 180, 0.5);
+            background-color: var(--secondary-color);
+        }
+
+        .link i {
+            margin-right: 0.5rem;
+            font-size: 1.2rem;
+        }
+
+        .hearts {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 100;
+        }
+
+        .heart {
+            position: absolute;
+            font-size: 20px;
+            animation: float 5s ease-in-out infinite;
+        }
+
+        @keyframes float {
+            0% {
+                transform: translateY(100vh) scale(0);
+                opacity: 1;
+            }
+            100% {
+                transform: translateY(-100vh) scale(1);
+                opacity: 0;
+            }
+        }
+
+        .stars, .twinkling, .clouds {
+            position: absolute;
+            display: block;
+            top: 0; bottom: 0;
+            left: 0; right: 0;
+            width: 100%; height: 100%;
+        }
+
+        .stars {
+            z-index: 0;
+            background: #000 url('https://i.imgur.com/YKY28eT.png') repeat top center;
+        }
+
+        .twinkling {
+            z-index: 1;
+            background: transparent url('https://i.imgur.com/XYMF4ca.png') repeat top center;
+            animation: move-twink-back 200s linear infinite;
+        }
+
+        .clouds {
+            z-index: 2;
+            background: transparent url('https://i.imgur.com/mHbScrQ.png') repeat top center;
+            animation: move-clouds-back 200s linear infinite;
+        }
+
+        @keyframes move-twink-back {
+            from {background-position: 0 0;}
+            to {background-position: -10000px 5000px;}
+        }
+
+        @keyframes move-clouds-back {
+            from {background-position: 0 0;}
+            to {background-position: 10000px 0;}
+        }
+
+        @media (max-width: 480px) {
+            .container {
+                padding: 1.5rem;
+            }
+
+            h1 {
+                font-size: 1.5rem;
+            }
+
+            .bio {
+                font-size: 0.9rem;
+            }
+
+            .link {
+                padding: 0.8rem;
+            }
+
+            .avatar {
+                width: 120px;
+                height: 120px;
+            }
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <div class="menu-icon" id="menuIcon"></div> <!-- Drei Striche -->
-        <h1>Willkommen bei MishaPlu</h1>
-        <div class="header-logo">
-            <!-- <img src="rollmops.gif" alt="Logo 2"> -->
+    <div class="stars"></div>
+    <div class="twinkling"></div>
+    <div class="clouds"></div>
+    <div class="container">
+        <img src="https://cdn.discordapp.com/attachments/1227329732811554896/1283864010948612226/HAMSTER1_3_112px.png?ex=66f9a309&is=66f85189&hm=a65240ddbc13b744b8f79cf3e40baffec3c5977e173753f2036f88e33cc5ca9d&" alt="Streamerin Avatar" class="avatar">
+        <h1>MishaPlu</h1>
+        <p class="bio">Willkommen auf meiner Website! Hier findest du alle meine wichtigen Links.</p>
+        <div class="links">
+            <a href="https://www.tiktok.com/@misha.plu" class="link" id="tiktok">
+                <i class="fab fa-tiktok"></i>🌸 TikTok 🌸
+            </a>
+            <a href="https://www.instagram.com/misha.plu/" class="link" id="instagram">
+                <i class="fab fa-instagram"></i>🌸 Instagram 🌸
+            </a>
+            <a href="https://open.spotify.com/playlist/7BDDEZrQBk8N6dx4LfhCbv" class="link" id="spotify">
+                <i class="fab fa-spotify"></i>🌸 Spotify 🌸
+            </a>
+            <a href="https://whatsapp.com/channel/0029VaWqJO6FCCoSj8EHc414" class="link" id="whatsapp">
+                <i class="fab fa-whatsapp"></i>🌸 WhatsApp 🌸
+            </a>
+            <a href="https://discord.com/invite/xYt48YxHQY" class="link" id="discord">
+                <i class="fab fa-discord"></i>🌸 Discord 🌸
+            </a>
         </div>
-    </header>
+    </div>
+    <div class="hearts"></div>
+    <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
+    <script>
+        function createHeart() {
+            const heart = document.createElement('div');
+            heart.classList.add('heart');
+            heart.style.left = Math.random() * 100 + 'vw';
+            heart.style.animationDuration = Math.random() * 3 + 2 + 's';
+            heart.innerHTML = '💗';
+            document.querySelector('.hearts').appendChild(heart);
 
-    <nav id="sidebar" class="closed">
-        <div class="logo">
-            <img src="logo.png" alt="Logo" />
-        </div>
-        <ul>
-            <li><a href="#" onclick="showSection('home')">Links</a></li>
-        </ul>
-    </nav>
+            setTimeout(() => {
+                heart.remove();
+            }, 5000);
+        }
 
-    <main>
-        <section id="home" class="section active">
-            <h2>Meine Links</h2>
-            <ul class="links-list">
-                <li><a href="https://www.tiktok.com/@misha.plu" target="_blank"><img src="icons/tiktok.png" alt="TikTok" /> TikTok</a></li>
-                <li><a href="https://www.instagram.com/misha.plu/" target="_blank"><img src="icons/instagram.png" alt="Instagram" /> Instagram</a></li>
-                <li><a href="https://discord.com/invite/xYt48YxHQY" target="_blank"><img src="icons/discord.png" alt="Discord" /> Discord</a></li>
-                <li><a href="https://open.spotify.com/playlist/7BDDEZrQBk8N6dx4LfhCbv" target="_blank"><img src="icons/spotify.png" alt="Spotify" /> Spotify</a></li>
-                <li><a href="https://whatsapp.com/channel/0029VaWqJO6FCCoSj8EHc414" target="_blank"><img src="icons/whatsapp.png" alt="WhatsApp" /> WhatsApp</a></li>
-            </ul>
-            <img src="rollmops.gif" alt="Logo 2">
-        </section>
-    </main>
+        setInterval(createHeart, 300);
 
-    <footer>
-        <p>Danke fürs Vorbeischauen!</p>
-    </footer>
+        const links = document.querySelectorAll('.link');
+        links.forEach(link => {
+            link.addEventListener('mouseenter', () => {
+                anime({
+                    targets: link,
+                    scale: 1.05,
+                    duration: 300,
+                    easing: 'easeInOutQuad'
+                });
+            });
+            link.addEventListener('mouseleave', () => {
+                anime({
+                    targets: link,
+                    scale: 1,
+                    duration: 300,
+                    easing: 'easeInOutQuad'
+                });
+            });
+        });
 
-    <script src="script.js"></script>
+        anime({
+            targets: '.container',
+            scale: [0.9, 1],
+            opacity: [0, 1],
+            duration: 1000,
+            easing: 'easeInOutQuad'
+        });
+
+        anime({
+            targets: '.link',
+            translateY: [50, 0],
+            opacity: [0, 1],
+            delay: anime.stagger(100),
+            duration: 800,
+            easing: 'easeOutQuad'
+        });
+
+        anime({
+            targets: '.avatar',
+            rotateY: '1turn',
+            duration: 2000,
+            loop: true,
+            easing: 'easeInOutQuad',
+            direction: 'alternate'
+        });
+    </script>
 </body>
 </html>
