--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <div class="twinkling"></div>
     <div class="clouds"></div>
     <div class="container">
-        <img src="https://cdn.discordapp.com/attachments/1227329732811554896/1283864010948612226/HAMSTER1_3_112px.png?ex=66f9a309&is=66f85189&hm=a65240ddbc13b744b8f79cf3e40baffec3c5977e173753f2036f88e33cc5ca9d&" alt="Streamerin Avatar" class="avatar">
+        <img src="hamster.png" alt="Plu" class="avatar">
         <h1>MishaPlu</h1>
         <p class="bio">Willkommen auf meiner Website! Hier findest du alle meine wichtigen Links.</p>
         <div class="links">
