--- a/index.html
+++ b/index.html
@@ -221,6 +221,9 @@
             <a href="https://whatsapp.com/channel/0029VaWqJO6FCCoSj8EHc414" class="link" id="whatsapp">
                 <i class="fab fa-whatsapp"></i>🌸 WhatsApp 🌸
             </a>
+            <a href="https://www.amazon.de/hz/wishlist/ls/2FVJ6TV2NC31J?ref_=wl_share" class="link" id="amazon">
+                <i class="fab fa-amazon"></i>🌸 Amazon 🌸
+            </a>
             <a href="https://discord.com/invite/xYt48YxHQY" class="link" id="discord">
                 <i class="fab fa-discord"></i>🌸 Discord 🌸
             </a>
